examples/test/testpolicy8615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8615
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key25: value17
      key20: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value49
      podSelector:
        matchLabels:
          key13: value31
          key32: value6
          key28: value31
